When editing multiple curve objects, Smooth operators only work on the active spline #64974

Closed
opened 2019-05-22 07:06:22 +02:00 by Sam Brubaker · 3 comments

Version: 2.80 daily build for 64-bit Linux (date: May 21st, hash: 8acc...)

multi_edit_curve_bug.blend

How to reproduce:

  • Open the attached file, or create a file with multiple curve objects
  • Select all the curve objects and enter edit mode
  • Select all points
  • Use Control Points > Smooth

Note that only the active (last selected) spline is affected by the operator. The operator will not work across multiple objects at once. It works on multiple splines only when they are of the same object.

This behavior is not ideal, especially since it is not consistent with the operator's behavior when it is used on multiple splines in a single object (join the the objects, try again, and see that it works as expected). This appears to be broken on the operators Smooth, Smooth Curve Tilt, and Smooth Curve Radius. I have not tested any others.

Version: 2.80 daily build for 64-bit Linux (date: May 21st, hash: 8acc...) [multi_edit_curve_bug.blend](https://archive.blender.org/developer/F7059613/multi_edit_curve_bug.blend) How to reproduce: - Open the attached file, or create a file with multiple curve objects - Select all the curve objects and enter edit mode - Select all points - Use Control Points > Smooth # Note that only the active (last selected) spline is affected by the operator. The operator will not work across multiple objects at once. It works on multiple splines only when they are of the same object. This behavior is not ideal, especially since it is not consistent with the operator's behavior when it is used on multiple splines in a single object (join the the objects, try again, and see that it works as expected). This appears to be broken on the operators Smooth, Smooth Curve Tilt, and Smooth Curve Radius. I have not tested any others.
Author

Added subscriber: @rocketman

Added subscriber: @rocketman

This issue was referenced by 5bf429b0e4

This issue was referenced by 5bf429b0e43f90b8066576251aa5275b79cdf50d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64974
No description provided.