Fix T64974: misisng multi-object edit for some curve operators, like smooth